--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,11 +45,13 @@
         </activity>
         <activity
             android:name=".MemoryActivity"
-            android:label="@string/title_activity_memory" >
+            android:label="@string/title_activity_memory"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".MediaPlayerActivity"
-            android:label="@string/title_activity_media_player" >
+            android:label="@string/title_activity_media_player"
+            android:screenOrientation="portrait">
         </activity>
 
 
