--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,14 +46,13 @@
         <activity
             android:name=".MemoryActivity"
             android:label="@string/title_activity_memory"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".MediaPlayerActivity"
             android:label="@string/title_activity_media_player"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
-
 
         <service
             android:name=".PlayerMediaService"
@@ -64,6 +63,10 @@
         <activity
             android:name=".GPSActivity"
             android:label="@string/title_activity_gps" >
+        </activity>
+        <activity
+            android:name=".PerfilActivity"
+            android:label="@string/title_activity_perfil" >
         </activity>
     </application>
 
